--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <input type="text" id="userName" placeholder="Informe seu nome" />
             <button id="submitNameBtn">Enviar</button>
         </div>
-        <button id="startBtn">Iniciar</button>
+        <button id="startBtn" class="btn_inicio">Iniciar</button>
     </div>
 
     <!-- Modal com o guia do quiz -->
@@ -53,7 +53,7 @@
         <div class="progress--bar"></div>
     </div>
 
-    <h1>Quiz</h1>
+    <h1 class="text">Quiz</h1>
 
     <div class="questionArea">
         <div class="question">...</div>
