--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <input type="text" id="userName" placeholder="Informe seu nome" />
             <button id="submitNameBtn">Enviar</button>
         </div>
-        <button id="startBtn" class="btn_inicio">Iniciar</button>
+        <button id="startBtn" class="btn_inicio" style="display: none;">Iniciar</button>
     </div>
 
     <!-- Modal com o guia do quiz -->
@@ -69,7 +69,10 @@
         <div class="scorePct"></div>
         <div class="scoreText2"></div>
         <button class="resetar">Fazer novamente</button>
+        <button class="resetar btn_correct">Visualizar acerto</button>
+        <button class="resetar btn_error">Visualizar erros</button>
     </div>
+
 
     <footer>Direitos Reservados &copyJoão Queiroz</footer>
     
